fixes header position on smaller screens, reinstates welcome bg

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3431,6 +3431,11 @@ input, select, textarea {
 				padding: 1em 2em;
 			}
 
+				#header > nav > ul {
+					max-width: 13em;
+					float: right;
+				}
+
 		}
 
 		@media screen and (max-width: 480px) {
@@ -3450,15 +3455,20 @@ input, select, textarea {
 					border-top: solid 1px rgba(255, 255, 255, 0.15);
 					text-align: inherit;
 				}
-
-					#header > nav > ul > li {
-						margin-left: 1.5em;
-					}
-
-						#header > nav > ul > li a {
-							height: 6em;
-							line-height: 6em;
+					
+					#header > nav > ul {
+						max-width: 100%;
+						float: none;
+					}				
+					
+						#header > nav > ul > li {
+							margin-left: 1.5em;
 						}
+
+							#header > nav > ul > li a {
+								height: 6em;
+								line-height: 6em;
+							}
 
 		}
 
